--- a/src/Explore.css
+++ b/src/Explore.css
@@ -12,6 +12,7 @@ nav{
     cursor: pointer;
     position: relative;
     cursor: pointer;
+    max-height: 300px;
     
 }
 .single-explore-post:hover .explore-overview{
@@ -37,14 +38,14 @@ nav{
 }
 
 .explore-icon-container i{
-     color: white;
+    color: white;
     font-size: 1.5rem;
 }
 
 .explore-model{
     background-color: white;
     width: 1000px;
-      display: grid;
+    display: grid;
     grid-template-columns: repeat(2,1fr);
 }
 .left-model img {
