--- a/src/Explore.css
+++ b/src/Explore.css
@@ -48,9 +48,22 @@ nav{
     display: grid;
     grid-template-columns: repeat(2,1fr);
 }
-.left-model img {
+
+.left-model{
     width: 100%;
     height: 100%;
+    position: relative;
+}
+.left-model img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    display: block;
+    object-position: center;
+    object-fit: cover;
+    height: 100%;
+    
 }
 .model-center{
     padding: 1rem;
