--- a/src/Timeline.css
+++ b/src/Timeline.css
@@ -1,207 +1,202 @@
-.container{
-    max-width: 950px;
-    margin: auto;
+.container {
+  max-width: 950px;
+  margin: auto;
 }
 nav {
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: .8rem 6rem;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.178);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.8rem 6rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.178);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
-.logo{
-    display: flex;
-    align-items: center;
+.logo {
+  display: flex;
+  align-items: center;
 }
-.search-container{
-    position: relative;
-    width: 250px;
+.search-container {
+  position: relative;
+  width: 250px;
 }
-.search-container input{
-    padding: .2rem 1rem;
-    width: 100%;    
-    border: 1px solid rgba(0, 0, 0, 0.178);
-    background-color: #fafafa;
-    text-align: center;
+.search-container input {
+  padding: 0.2rem 1rem;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.178);
+  background-color: #fafafa;
+  text-align: center;
 }
-.search-container input:focus{
-     outline: none;
-    border: rgba(0, 0, 0, 0.37) 1px solid;
-    text-align: left;
-    padding-left: 2rem;
+.search-container input:focus {
+  outline: none;
+  border: rgba(0, 0, 0, 0.37) 1px solid;
+  text-align: left;
+  padding-left: 2rem;
 }
-.search{
-    position: absolute;
-    top: .4rem;
-    left: .8rem;
-    color: rgba(0, 0, 0, 0.26);
-    font-size: small;
-    
+.search {
+  position: absolute;
+  top: 0.4rem;
+  left: 0.8rem;
+  color: rgba(0, 0, 0, 0.26);
+  font-size: small;
 }
 .logo i {
-    font-size: 1.3rem;
+  font-size: 1.3rem;
 }
 
-.nav-icons i{
-    font-size: 1.3rem;
-    margin-right: 1.3rem;
-    cursor: pointer;
-    color: rgba(0, 0, 0, 0.781);
+.nav-icons i {
+  font-size: 1.3rem;
+  margin-right: 1.3rem;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.781);
 }
-.model-overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.507);
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-    
+.model-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.507);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.del-model-overlay{
-     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.507);
-    z-index: 20;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.del-model-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.507);
+  z-index: 20;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.model-container{
-    background-color: white;
-    margin: 5rem;
-    width: 500px;
-    border-radius: 5px;
-     z-index: 20;
+.model-container {
+  background-color: white;
+  margin: 5rem;
+  width: 500px;
+  border-radius: 5px;
+  z-index: 20;
 }
-.model-top{
-    text-align: center;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.178);
-    position: relative;
-    padding: 1rem;
+.model-top {
+  text-align: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.178);
+  position: relative;
+  padding: 1rem;
 }
-.close-post{
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 1rem;
-    background-color: #fafafa;
-    padding: .3rem;
-    border-radius: 50%;
-    cursor: pointer;
-    color: rgba(0, 0, 0, 0.562);
+.close-post {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 1rem;
+  background-color: #fafafa;
+  padding: 0.3rem;
+  border-radius: 50%;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.562);
 }
-.model-user{
-    display: flex;
-    align-items: center;
+.model-user {
+  display: flex;
+  align-items: center;
 }
-.model-center-send{
-    padding: 1rem;
+.model-center-send {
+  padding: 1rem;
 }
 .model-user span {
-    margin-right: .5rem;
+  margin-right: 0.5rem;
 }
-.caption{
-    margin: 1rem 0;
-    width: 100%;
-    height: 7rem;
-    padding: .5rem;
-    border: 1px solid rgba(0, 0, 0, 0.178);
+.caption {
+  margin: 1rem 0;
+  width: 100%;
+  height: 7rem;
+  padding: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.178);
 }
-.caption:focus{
-    outline: none;
-    border: rgba(0, 0, 0, 0.37) 1px solid;
+.caption:focus {
+  outline: none;
+  border: rgba(0, 0, 0, 0.37) 1px solid;
 }
-.post-btn{
-    border: none;
-    background-color: #4294ff;
-    width: 100%;
-    padding: .5rem 0;
+.post-btn {
+  border: none;
+  background-color: #4294ff;
+  width: 100%;
+  padding: 0.5rem 0;
 }
-.timeline-grid{
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: auto;
-    margin-top: 5rem;
-    max-width: 600px;
+.timeline-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: auto;
+  margin-top: 5rem;
+  max-width: 600px;
 }
-.user-sidebar{
-   top: 4.4rem;
-   right: 22rem;
+.user-sidebar {
+  top: 4.4rem;
+  right: 22rem;
 }
-.single-post{
-    background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.178);
-    margin-bottom: 1.5rem;
+.single-post {
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.178);
+  margin-bottom: 1.5rem;
   display: grid;
   grid-template-rows: auto 1fr;
 }
 
-.timeline-img-container{
-    max-height: 400px;
+.timeline-img-container {
+  max-height: 400px;
 }
-.timeline-img-container img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-
+.timeline-img-container img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
-.post-icons{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5rem 1rem;
-    font-size: 1.2rem;
+.post-icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
 }
-.left-icons i{
-    margin-right: 1rem;
-    cursor: pointer;
+.left-icons i {
+  margin-right: 1rem;
+  cursor: pointer;
 }
-.comment-container{
-    display: flex;
-    align-items: center;
-    padding: 0 1rem;
-    margin-top: 1rem;
-    border-top: 1px solid rgba(0, 0, 0, 0.178);
-    
+.comment-container {
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  margin-top: 1rem;
+  border-top: 1px solid rgba(0, 0, 0, 0.178);
 }
 .comment-container input {
-    width: 100%;
-    border: none;
-    padding: .8rem 0;
+  width: 100%;
+  border: none;
+  padding: 0.8rem 0;
 }
-.comment-container input:focus{
-    outline: none;
+.comment-container input:focus {
+  outline: none;
 }
-.comment-container button{
-    border: none;
-    color: #4294ff;
-    font-weight: bold;
-    background-color: rgba(0, 0, 0, 0);
-    cursor: pointer;
+.comment-container button {
+  border: none;
+  color: #4294ff;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
 }
-.delete-container{
-    background: white;
-    width: 400px;
-    text-align: center;
-    border-radius: 10px;
-    overflow: hidden;
-    z-index: 20;
+.delete-container {
+  background: white;
+  width: 400px;
+  text-align: center;
+  border-radius: 10px;
+  overflow: hidden;
+  z-index: 20;
 }
-.delete-container h5{
-    padding: 1rem 0;
-    cursor: pointer;
-    font-weight: 400;
+.delete-container h5 {
+  padding: 1rem 0;
+  cursor: pointer;
+  font-weight: 400;
 }
