--- a/src/Explore.css
+++ b/src/Explore.css
@@ -1,92 +1,89 @@
-.explore{
-display: grid;
-grid-template-columns: repeat(3,1fr);
-margin-top: 5rem;
-gap: 1.5rem;
-
+.explore {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 5rem;
+  gap: 1.5rem;
 }
-nav{
-    z-index: 5;
+nav {
+  z-index: 5;
 }
-.single-explore-post{
-    cursor: pointer;
-    position: relative;
-    cursor: pointer;
-    max-height: 250px;
-    
+.single-explore-post {
+  cursor: pointer;
+  position: relative;
+  cursor: pointer;
+  max-height: 250px;
 }
-.single-explore-post:hover .explore-overview{
-    opacity: 1;
+.single-explore-post:hover .explore-overview {
+  opacity: 1;
 }
-.single-explore-post img{
-    width: 100%;
-    height: 100%;
-    display: block;
+.single-explore-post img {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
-.explore-overview{
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.39);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
+.explore-overview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.39);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
 }
 
-.explore-icon-container i{
-    color: white;
-    font-size: 1.5rem;
+.explore-icon-container i {
+  color: white;
+  font-size: 1.5rem;
 }
 
-.explore-model{
-    background-color: white;
-    width: 1000px;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+.explore-model {
+  background-color: white;
+  width: 1000px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.left-model{
-    width: 100%;
-    height: 100%;
-    position: relative;
+.left-model {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 .left-model img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    display: block;
-    object-position: center;
-    object-fit: cover;
-    height: 100%;
-    
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  display: block;
+  object-position: center;
+  object-fit: cover;
+  height: 100%;
 }
-.model-center{
-    padding: 1rem;
+.model-center {
+  padding: 1rem;
 }
-.single-model-comment{
-    display: flex;
-    align-items: center;
-    margin: 1rem 0;
-    justify-content: space-between;
+.single-model-comment {
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
+  justify-content: space-between;
 }
-.single-model-comment:hover .del-comment{
-    opacity: 1;
+.single-model-comment:hover .del-comment {
+  opacity: 1;
 }
-.del-comment{
-    color: gray;
-    cursor: pointer;
-    opacity: 0;
+.del-comment {
+  color: gray;
+  cursor: pointer;
+  opacity: 0;
 }
-.right-model{
-    display: grid;
-    grid-template-rows: auto 2fr auto;
+.right-model {
+  display: grid;
+  grid-template-rows: auto 2fr auto;
 }
-.model-center{
-    overflow: auto;
-    height: 340px;
+.model-center {
+  overflow: auto;
+  height: 340px;
 }
